@@ -1,3 +1,11 @@
+2005-10-10  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* gst/base/gsttypefindhelper.c: (helper_find_peek),
+	(gst_type_find_helper):
+	  Check whether we have the requested data already in our list of
+	  cached buffers before pulling a new buffer; also make the buffer
+	  list a GSList. Speeds up typefinding by ca. 5-10% altogether.
+
 2005-10-10  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* gst/gstcaps.c:
